--- a/src/component/Items/Display.module.css
+++ b/src/component/Items/Display.module.css
@@ -4,7 +4,7 @@
     margin-left: 10px;
     margin-right: 10px;
     width: 30%;
-    background-color: burlywood;
+    background-color: darkgray;
     border-radius: 25px;
     box-shadow: 2px 2px 10px black;
   }
@@ -29,24 +29,8 @@
   
   .desc {
     text-align: center;
-  }
-  
-  .button {
+  } 
+
+  .btn {
     text-align: center;
-    cursor: pointer;
-    font: inherit;
-    border: none;
-    background-color: #410579;
-    color: white;
-    padding: 0.5rem 0.5rem;
-    border-radius: 25px;
-    font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 20px;
   }
-  
-  .button:hover {
-    background-color: #160327;
-    transition: 0.5s;
-  }
-  
